--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ version = "0.1"
 authors = [
     {name = "Yunyu Guo",email="guoyunyu2017@outlook.com"}]
 description = "A processing tool for FITS files related to LAMOST"
-readme = "README.md"
+license = "GPL-3.0-or-later"
+license-files = ["LICENCE"]
+readme = "readme.md"
 requires-python = ">=3.10"
 dependencies = [
     "numpy"
@@ -16,6 +18,9 @@ dependencies = [
     ,"matplotlib"
     ,"astropy"
     ,"scipy>=1.14.0"
+    ,"seaborn"
+    ,"aiohttp"
+    ,"aiofiles
 ]
 
 classifiers = [
@@ -34,4 +39,7 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Operating System :: POSIX :: Linux",
+  "Operating System :: Microsoft :: Windows"
+
 ]
