--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,8 @@ dependencies = [
     ,"scipy>=1.14.0"
     ,"seaborn"
     ,"aiohttp"
-    ,"aiofiles
+    ,"aiofiles"
 ]
-
 classifiers = [
   # How mature is this project? Common values are
   #   3 - Alpha
@@ -39,6 +38,7 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
   "Operating System :: POSIX :: Linux",
   "Operating System :: Microsoft :: Windows"
 
